--- a/src/app/task/task-filter/task-filter.component.html
+++ b/src/app/task/task-filter/task-filter.component.html
@@ -1,21 +1,21 @@
+<p-overlayPanel #xsPanel>
+
+</p-overlayPanel>
+
 <form [formGroup]="form">
   <div class="ks-grid">
-    <div class="ks-col">
-      <span class="ui-float-label">
-         <input autofocus (keyup.escape)="form.get('name').patchValue(undefined)" id="searchName" type="text" pInputText formControlName="name"/>
-         <label for="searchName">Search for name</label>
-       </span>
-    </div>
+    <app-name-filter [form]="form"></app-name-filter>
     <div class="ks-col">
       <app-tag-input label="Search for tags" formControlName="tags"></app-tag-input>
     </div>
-    <div class="ks-col">
-      <span class="ui-float-label">
-        <input (keyup.escape)="form.get('content').patchValue(undefined)" id="searchContent" type="text" pInputText formControlName="content"/>
-        <label for="searchContent">Search for content</label>
-       </span>
-    </div>
-    <div class="ks-col">
+    <app-content-filter [form]="form"></app-content-filter>
+    <app-task-filter-state [form]="form"></app-task-filter-state>
+    <app-task-filter-finished [form]="form"></app-task-filter-finished>
+    <app-task-filter-actionable [form]="form"></app-task-filter-actionable>
+    <app-task-filter-project [form]="form"></app-task-filter-project>
+    <app-task-filter-remaining-time [form]="form"></app-task-filter-remaining-time>
+    <app-task-filter-earliest-start-date [form]="form"></app-task-filter-earliest-start-date>
+    <div class="ks-col" style="padding-left: 5px" *ngIf="display.sm">
       <button pButton type="button" icon="fa fa-times-circle" (click)="onReset()"></button>
     </div>
   </div>
