added promodoro timer

--- a/src/app/page/page-title/page-title.component.html
+++ b/src/app/page/page-title/page-title.component.html
@@ -2,7 +2,9 @@
   <app-main-navigation (onClick)="sideBarVisible=false"></app-main-navigation>
 </p-sidebar>
 <div class="ActiveTaskContainer">
+  <div style="flex-grow: 1">
   <app-active-task></app-active-task>
+  </div>
   <app-promodoro></app-promodoro>
 </div>
 <div class="container">
