task selection for working on task

--- a/src/app/formitems/repository-input/repository-input.component.html
+++ b/src/app/formitems/repository-input/repository-input.component.html
@@ -1,7 +1,7 @@
 
 <div class="p-grid">
   <div class="p-col FloatLabelInput">
-    <app-repository-selector label="Repository" [ngModel]="repository" (ngModelChange)="setRepository($event)" label="Repository"></app-repository-selector>
+    <app-repository-selector [inputStyleClass]="inputStyleClass" label="Repository" [ngModel]="repository" (ngModelChange)="setRepository($event)" label="Repository"></app-repository-selector>
   </div>
   <div class="p-col" *ngIf="!repository">
     <p-message severity="error" text="Repository is required" *ngIf="!repository"></p-message>
