--- a/src/app/page/active-task/active-task.component.html
+++ b/src/app/page/active-task/active-task.component.html
@@ -1,3 +1,23 @@
+<p-dialog header="Select task to work on" modal="true" dismissableMask="true" positionTop="0" [(visible)]="showTaskSelection">
+  <form [formGroup]="form">
+    <div class="ks-grid" style="padding-top: 1em">
+      <div class="ks-col" style="padding-right: 0.5em">
+      <span class="ui-float-label">
+        <input #newTaskName id="newTaskName" type="text" class="NewTaskInput" pInputText formControlName="name">
+        <label for="newTaskName">Or create new task</label>
+      </span>
+      </div>
+      <div class="ks-col" style="padding-right: 0.5em">
+        <app-repository-selector [inputStyleClass]="repoInputClass" formControlName="repo"></app-repository-selector>
+      </div>
+      <div class="ks-col" style="padding-right: 0px">
+        <button pButton icon="fa fa-plus" [disabled]="!form.valid" (click)="onWorkOnNewTask()"></button>
+      </div>
+    </div>
+  </form>
+  <app-task-selection (selectedTask)="workOnTask($event)"></app-task-selection>
+</p-dialog>
+
 <div style="display: flex">
   <div *ngIf="task" style="flex-grow: 0">
     <button pButton icon="fa fa-stop" [pTooltip]="'Stop '+task.name" (click)="onStopWork()"></button>
@@ -8,7 +28,7 @@
   <div *ngIf="task" style="flex-grow: 0">
     <button pButton icon="fa fa-check" [pTooltip]="'Finish '+task.name" (click)="onFinish()"></button>
   </div>
-  <div *ngIf="task" >
+  <div *ngIf="task">
     <span [ngStyle]="taskLabelStyle()">{{task.name}}</span>
   </div>
 </div>
