--- a/src/app/tag/taginput/tag-input.component.html
+++ b/src/app/tag/taginput/tag-input.component.html
@@ -1,7 +1,7 @@
-<p-autoComplete *ngIf="!label" field="name" (onBlur)="onTouched()" inputStyleClass="FormInputTag" #autocomplete (onKeyUp)="onKeyUp($event)" id="autoCompleteTags" (onSelect)="onSelect($event)" (onUnselect)="onUnselect($event)" [(ngModel)]="tags" [suggestions]="results" (completeMethod)="search($event)" [multiple]="true" >
+<p-autoComplete *ngIf="!label" field="name" (onBlur)="onTouched()" [inputStyleClass]="inputStyleClass" #autocomplete (onKeyUp)="onKeyUp($event)" id="autoCompleteTags" (onSelect)="onSelect($event)" (onUnselect)="onUnselect($event)" [(ngModel)]="tags" [suggestions]="results" (completeMethod)="search($event)" [multiple]="true" >
 </p-autoComplete>
 <span *ngIf="label" class="ui-float-label">
-    <p-autoComplete #autocomplete inputStyleClass="FormInputTag" field="name" (onKeyUp)="onKeyUp($event)" id="autoCompleteTags" (onSelect)="onSelect($event)" (onUnselect)="onUnselect($event)" [(ngModel)]="tags" [suggestions]="results" (completeMethod)="search($event)" [multiple]="true" >
+    <p-autoComplete #autocomplete [inputStyleClass]="inputStyleClass"  field="name" (onKeyUp)="onKeyUp($event)" id="autoCompleteTags" (onSelect)="onSelect($event)" (onUnselect)="onUnselect($event)" [(ngModel)]="tags" [suggestions]="results" (completeMethod)="search($event)" [multiple]="true" >
     </p-autoComplete>
     <label for="autoCompleteTags">{{label}}</label>
 </span>
