float buttons on mobile

--- a/src/app/markdown/markdown-buttons/markdown-buttons.component.html
+++ b/src/app/markdown/markdown-buttons/markdown-buttons.component.html
@@ -1,4 +1,4 @@
-<div class="ks-grid">
+<div class="ks-grid" [ngStyle]="barStyle">
   <div class="ks-col SmallGap">
     <button pButton icon="fa fa-bold" (click)="bold.emit()"></button>
   </div>
