trying to figure out manual sorting of task list

--- a/src/app/contact/contact-overview/contact-overview.component.html
+++ b/src/app/contact/contact-overview/contact-overview.component.html
@@ -1,5 +1,5 @@
 <app-page-title title="Contacts">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em" (click)="addContact()"></button>
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em;margin-bottom: 0.4em" (click)="addContact()"></button>
 </app-page-title>
 
 
