--- a/src/app/thought/thought-buttons/thought-buttons.component.html
+++ b/src/app/thought/thought-buttons/thought-buttons.component.html
@@ -11,7 +11,7 @@
     <button pButton type="button" icon="fa fa-edit" pTooltip="Edit" (click)="this.onEdit()" [label]="showLabels? 'Edit' : null"></button>
   </div>
   <div class="ks-col">
-    <button pButton type="button" icon="fa fa-clipboard-list" pTooltip="Task" class="ui-button-success" (click)="this.onTask()" [label]="showLabels? 'To Task' : null"></button>
+    <button pButton type="button" icon="fa fa-tasks" pTooltip="Task" class="ui-button-success" (click)="this.onTask()" [label]="showLabels? 'To Task' : null"></button>
   </div>
   <div class="ks-col">
     <button pButton type="button" icon="fa fa-book" pTooltip="Document" class="ui-button-info" (click)="this.onDocument()" [label]="showLabels ? 'To Document' : null"></button>
