--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,11 @@ body {
     padding-bottom: 0.5em;
     padding-right: 1em;
 }
+.ks-col-no-right-pad {
+    flex-grow: 0;
+    padding-bottom: 0.5em;
+    padding-right: 0;
+}
 
 .ks-item {
     flex-grow: 1;
