--- a/src/app/document/document-overview/document-overview.component.html
+++ b/src/app/document/document-overview/document-overview.component.html
@@ -1,5 +1,5 @@
 <app-page-title title="Documents">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new document" style="width: 5em; height: 2.5em" (click)="this.addDoc()"></button>
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new document" style="width: 5em; height: 2.5em;margin-bottom: 0.4em" (click)="this.addDoc()"></button>
 </app-page-title>
 
 
