--- a/src/app/thought/thought-overview/thought-overview.component.html
+++ b/src/app/thought/thought-overview/thought-overview.component.html
@@ -1,6 +1,7 @@
 <app-page-title title="Thoughts">
-    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em" (click)="this.addThought()"></button>
+    <button pButton type="button" icon="fa fa-plus-circle" pTooltip="Add new thought" style="width: 5em; height: 2.5em; margin-bottom: 0.4em" (click)="this.addThought()"></button>
 </app-page-title>
+
 
 <div class="p-grid">
   <div class="p-col">
