--- a/src/app/thought/thought-overview/thought-overview.component.html
+++ b/src/app/thought/thought-overview/thought-overview.component.html
@@ -6,11 +6,17 @@
 <div class="p-grid">
   <div class="p-col">
     <app-thought-filter (filter)="onFilter($event)"></app-thought-filter>
-    <p-table [autoLayout]="display.sm" [value]="thoughts" [rowHover]="true">
+    <p-table [autoLayout]="display.sm" [value]="thoughts" [rowHover]="true" sortMode="multiple">
       <ng-template pTemplate="header">
         <tr>
-          <th>Name</th>
-          <th *ngIf="display.md">Created</th>
+          <th pSortableColumn='name'>
+            Name
+            <p-sortIcon field="name"></p-sortIcon>
+          </th>
+          <th *ngIf="display.md" pSortableColumn='created'>
+            Created
+            <p-sortIcon field="created"></p-sortIcon>
+          </th>
           <th *ngIf="display.md">Repository</th>
           <th style="max-width: 161px">Action</th>
         </tr>
