--- a/src/app/page/main-navigation/main-navigation.component.html
+++ b/src/app/page/main-navigation/main-navigation.component.html
@@ -19,6 +19,11 @@
     <span class="title">Lists</span>
     <br/>
   </a>
+  <a routerLink="/schedule" routerLinkActive="active" class="NavLink" (click)="onClick.emit()">
+    <fa-icon [icon]="scheduleIcon" class="fa-3x"></fa-icon>
+    <span class="title">Scheduling</span>
+    <br/>
+  </a>
   <a routerLink="/doc" routerLinkActive="active" class="NavLink" (click)="onClick.emit()">
     <fa-icon [icon]="docsIcon" class="fa-3x"></fa-icon>
     <span class="title">Documents</span>
